padding perf output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(FsharingPass)
 add_subdirectory(ReorderPass)
 add_subdirectory(PrintPass)
 add_subdirectory(GroupTPass)
+add_subdirectory(IndirectionPass)
