--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 include_directories(${LLVM_INCLUDE_DIRS})
 
-add_subdirectory(FsharingPass)
+add_subdirectory(PaddingPass)
 add_subdirectory(ReorderPass)
 add_subdirectory(PrintPass)
 add_subdirectory(GroupTPass)
